# binder.org-sample

./: .justfile  README.md  devenv.nix  loader_sample.ipynb  numpy_sample.ipynb  numpy_tutorial.ipynb  pyproject.toml  requirements.txt  tutorial.ipynb
src/: config.json  config.yaml  greetings.py
