[project]
name = "test-binder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipympl>=0.9.7",
    "jupyterlab-language-pack-de-de>=4.4.post0",
    "matplotlib>=3.10.3",
    "mpl-interactions>=0.24.2",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
local = [
    "jupyter>=1.1.1",
]
